...
    android:layout_width="match_parent"
    android:background="@drawable/fallingcoin"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="315dp"
        android:layout_height="291dp"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
...
            android:textStyle="normal|bold"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
